Fix cache being stuck whe adding hold frames

When a hold frame is inserted we should just extend the existing
cached frame duration to cover this period of time.

The patch implements that in a form of a gluer that extends/glues the
frames on the next dirty frame generation.

BUG:481099