libs/ui/tests/kis_animation_frame_cache_test.h
@@ -18,6 +18,9 @@ class KisAnimationFrameCacheTest : public QObject
 private Q_SLOTS:
     void testCache();
 
+    void testFrameGlueing_data();
+    void testFrameGlueing();
+
     void slotFrameGenerationFinished(int time);
 
 private:
